# tauri-plugin-download

./: .markdownlint-cli2.cjs  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.cjs  package-lock.json  package.json  rollup.config.js  rustfmt.toml
.github/workflows/: ci.yml
android/: .gitignore  build.gradle.kts
android-src/DownloadManagerExample/: settings.gradle
android-src/DownloadManagerExample/app/: build.gradle
android-src/DownloadManagerExample/app/src/androidTest/java/com/plugin/downloadmanagerexample/: ExampleInstrumentedTest.kt
android-src/DownloadManagerExample/app/src/main/java/com/plugin/downloadmanagerexample/: DownloadError.kt  DownloadItem.kt  DownloadManager.kt  DownloadState.kt  DownloadStore.kt  DownloadWorker.kt  MainActivity.kt
android-src/DownloadManagerExample/app/src/test/java/com/plugin/downloadmanagerexample/: ExampleUnitTest.kt
android-src/DownloadManagerExample/gradle/: libs.versions.toml
android-src/DownloadManagerExample/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: DownloadPlugin.kt  Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
crates/download-manager/: Cargo.toml
crates/download-manager/src/: download.rs  error.rs  lib.rs  models.rs
examples/tauri-app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/tauri-app/src/: App.vue  DownloadView.vue  vite-env.d.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: actions.ts  index.ts  types.ts
ios/: Package.swift  README.md
ios-src/DownloadManagerExample/DownloadManagerExample/: AppDelegate.swift  DownloadManagerExampleApp.swift  DownloadsView.swift
ios-src/DownloadManagerExample/DownloadManagerExample.xcodeproj/: project.pbxproj
ios-src/DownloadManagerKit/: Package.swift
ios-src/DownloadManagerKit/Sources/DownloadManagerKit/: DownloadActionResponse.swift  DownloadContinuation.swift  DownloadError.swift  DownloadItem.swift  DownloadManager.swift  DownloadState.swift
ios/Sources/: DownloadPlugin.swift  ExamplePlugin.swift
ios/Tests/PluginTests/: DownloadPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_native.toml  list.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  shared.rs  store.rs  utils.rs
(+3 files in other folders)
