[package]
name = "tauri-plugin-download"
version = "0.1.0"
description = "A Tauri background download plugin"
license = "MIT"
edition = "2024"
rust-version = "1.89"
links = "tauri-plugin-download"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.5.1" }
tauri-plugin-http = "2.3.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-upload = "2.2.0"
thiserror = "2"
tokio = "1.44.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin = { version = "2.2.0", features = ["build"] }
